--- a/index.html
+++ b/index.html
@@ -43,16 +43,11 @@
   <div class="bgLayer"></div>
   <div class="parallaxLayer"></div>
 
-  <!-- SPRITES -->
-  <img class="sprite kitty orange" src="assets/kitty-orange.png" alt="orange kitty">
-  <img class="sprite kitty black" src="assets/kitty-black.png" alt="black kitty">
-  <img class="sprite kitty fluffy" src="assets/kitty-fluffy.png" alt="fluffy kitty">
+   <!-- FOREST SCENE (kitties + mushrooms) -->
+  <div id="scene">
+    <div id="sceneLayer" class="layer"></div>
+  </div>
 
-  <!-- MUSHROOM OBSTACLES (positioned by JS on load) -->
-  <img id="mush1" class="sprite mushroom" src="assets/mushroom1.png" alt="mushroom">
-  <img id="mush2" class="sprite mushroom" src="assets/mushroom2.png" alt="mushroom">
-  <img id="mush3" class="sprite mushroom" src="assets/mushroom1.png" alt="mushroom">
-  <img id="mush4" class="sprite mushroom" src="assets/mushroom2.png" alt="mushroom">
 
   <main class="container">
 
