--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ENTER OVERLAY (required for audio in modern browsers) -->
   <div id="enterOverlay" class="overlay">
-    <div class="overlayCard">
+    <div class="overlayCard glitter-hover">
       <div class="blinkiesRow">
         <span class="blinkie">★ forestspace ★</span>
         <span class="blinkie alt">ONLINE</span>
@@ -23,8 +23,8 @@
       </p>
 
       <div class="enterActions">
-        <button id="enterBtn">Enter ✨</button>
-        <button id="muteBtn" class="secondary" title="Enter with music muted">Enter (Muted)</button>
+        <button id="enterBtn" class="btn primary">Enter ✨</button>
+        <button id="muteBtn" class="btn" title="Enter with music muted">Enter (Muted)</button>
       </div>
 
       <p class="tiny">
@@ -39,21 +39,12 @@
     <source src="assets/music.mp3" type="audio/mpeg">
   </audio>
 
-  <!-- BACKGROUND -->
-  <div class="bgLayer"></div>
-  <div class="parallaxLayer"></div>
-
-   <!-- FOREST SCENE (kitties + mushrooms) -->
-  <div id="scene">
-    <div id="sceneLayer" class="layer"></div>
-  </div>
-
-
   <main class="container">
 
-    <header class="profileHeader">
+    <header class="profileHeader glitter-hover">
       <div class="headerTop">
         <span class="badge">✨ ONLINE NOW ✨</span>
+
         <div class="nowPlaying">
           <span class="npLabel">Now Playing:</span>
           <span id="npText" class="npText">—</span>
@@ -73,14 +64,26 @@
       </div>
     </header>
 
+    <!-- FOREST SCENE (kitties + mushrooms) -->
+    <section class="card wide glitter-hover">
+      <h3>🌲 Forest Scene</h3>
+      <p class="tiny">The kitties avoid mushrooms (mostly) and hop over obstacles. Sometimes chaos happens.</p>
+
+      <div id="scene">
+        <div id="sceneLayer" class="layer"></div>
+      </div>
+
+      <p class="tiny">Tip: refresh if you want a new mushroom layout ✨</p>
+    </section>
+
     <section class="grid">
 
       <!-- LEFT COLUMN -->
-      <div class="card">
+      <div class="card glitter-hover">
         <h3>About Me</h3>
         <p>
           Welcome to my enchanted forest profile. If you see the orange kitty sprinting between trees,
-          that’s me. The black kitty is the chaos friend. The fluffy kitty is the wise, cranky, elder.
+          that’s me. The black kitty is the chaos friend. The grey-and-white kitty is the wise, cranky elder.
         </p>
 
         <div class="divider"></div>
@@ -94,14 +97,15 @@
         <div class="divider"></div>
 
         <p class="tiny">
-          Leave a note in my “Guestbook”: open an Issue on this repo (very 2026 Myspace).
+          Guestbook: open an Issue on this repo (very 2026 Myspace).
         </p>
         <p class="tiny">
-          <a href="#" onclick="alert('Guestbook idea: enable Issues in your repo and link them here!')">[ Guestbook / Comments ]</a>
+          <a href="https://github.com/nhudson-crosby/nhudson-crosby.io/issues/new?title=Guestbook:%20I%20visited%20Forestspace&body=Name:%0AFavorite%20mushroom:%0AFavorite%20kitty:%0A2010%20song%20rec:%0A%0A✨%20Leaving%20sparkles%20behind..."
+             target="_blank" rel="noreferrer">[ Sign the Guestbook ]</a>
         </p>
       </div>
 
-      <div class="card">
+      <div class="card glitter-hover">
         <h3>Blinkies + Links</h3>
 
         <div class="blinkiesGrid">
@@ -119,7 +123,6 @@
           <li><a href="#thrift">★ Thrift Corner</a></li>
           <li><a href="#game">★ Dragon Treat Game</a></li>
           <li><a href="#top8">★ Top 8 Thrift Finds</a></li>
-          <li><a href="#" onclick="alert('Add your socials here when ready ✨')">★ My Socials</a></li>
         </ul>
 
         <div class="divider"></div>
@@ -129,8 +132,8 @@
         </p>
       </div>
 
-      <!-- THRIFT MODULE (FULLER) -->
-      <div class="card wide" id="thrift">
+      <!-- THRIFT MODULE -->
+      <div class="card wide glitter-hover" id="thrift">
         <h3>🧥 Vintage Loving / Thrifting</h3>
 
         <div class="thriftGrid">
@@ -156,13 +159,13 @@
           </div>
 
           <p class="tiny">
-            Want this to be editable? I can add a little “Add a find” form that saves to localStorage.
+            Want this to be editable? (We can add the local “Add a find” form next.)
           </p>
         </div>
       </div>
 
       <!-- DRAGON GAME -->
-      <div class="card wide" id="game">
+      <div class="card wide glitter-hover" id="game">
         <h3>🐉 Dragon Treat Training Game</h3>
         <p class="tiny">Pick an egg. Feed treats. Your choices decide if your dragon breathes fire, grows wings, or bites you (rude).</p>
 
@@ -170,18 +173,18 @@
           <div class="gameStep" id="stepPickDragon">
             <p><strong>Step 1:</strong> Choose a dragon egg</p>
             <div class="choices">
-              <button data-dragon="ember">Ember Egg</button>
-              <button data-dragon="storm">Storm Egg</button>
-              <button data-dragon="moss">Moss Egg</button>
+              <button class="btn" data-dragon="ember">Ember Egg</button>
+              <button class="btn" data-dragon="storm">Storm Egg</button>
+              <button class="btn" data-dragon="moss">Moss Egg</button>
             </div>
           </div>
 
           <div class="gameStep hidden" id="stepPickTreat">
             <p><strong>Step 2:</strong> Choose a treat</p>
             <div class="choices">
-              <button data-treat="spicyJerky">Spicy Jerky</button>
-              <button data-treat="stardustBerry">Stardust Berry</button>
-              <button data-treat="marshmallow">Toasted Marshmallow</button>
+              <button class="btn" data-treat="spicyJerky">Spicy Jerky</button>
+              <button class="btn" data-treat="stardustBerry">Stardust Berry</button>
+              <button class="btn" data-treat="marshmallow">Toasted Marshmallow</button>
             </div>
           </div>
 
@@ -189,11 +192,11 @@
             <p id="resultText" class="resultText"></p>
 
             <div class="choices hidden" id="rideRow">
-              <button id="rideBtn">Ride the dragon 🪽</button>
+              <button id="rideBtn" class="btn primary">Ride the dragon 🪽</button>
             </div>
 
             <div class="choices">
-              <button id="resetBtn" class="secondary">Play again</button>
+              <button id="resetBtn" class="btn">Play again</button>
             </div>
 
             <div id="sky" class="sky hidden">
@@ -207,9 +210,10 @@
 
     </section>
 
-    <footer class="footer">
+    <footer class="footer tiny">
       ✨ made with glitter + GitHub Pages ✨
     </footer>
+
   </main>
 
   <script src="script.js"></script>
