--- a/index.html
+++ b/index.html
@@ -192,6 +192,6 @@
     <footer class="footer">✨ made with glitter + GitHub Pages ✨</footer>
   </main>
 
-  <script src="script.js"></script>
+  <script src="script.js?v=10"></script>
 </body>
 </html>
