--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Nikita’s Forestspace</title>
+  <title>Nikita's Forestspace ✨</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="styles.css?v=11" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600&family=Patrick+Hand&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css?v=12" />
 </head>
 <body>
 
-  <!-- ENTER OVERLAY (required for audio in modern browsers) -->
+  <!-- GLITTER CURSOR TRAIL -->
+  <canvas id="glitterCanvas"></canvas>
+
+  <!-- ENTER OVERLAY -->
   <div id="enterOverlay" class="overlay">
     <div class="overlayCard">
       <div class="blinkiesRow">
@@ -23,17 +29,23 @@
       </p>
 
       <div class="enterActions">
-        <button id="enterBtn">Enter ✨</button>
-        <button id="muteBtn" class="secondary" title="Enter with music muted">Enter (Muted)</button>
+        <button id="enterBtn" class="primaryBtn">Enter ✨</button>
+        <button id="muteBtn" class="secondaryBtn" title="Enter with music muted">Enter (Muted)</button>
       </div>
 
-      <p class="tiny">
+      <p class="tiny status-text">
         Tip: Autoplay is blocked unless you click. This click is the ritual.
       </p>
     </div>
   </div>
 
-  <!-- BACKGROUND MUSIC (optional; 404 won't break the site) -->
+  <!-- LOADING INDICATOR -->
+  <div id="loadingIndicator" class="loading-indicator hidden">
+    <div class="loading-spinner"></div>
+    <p>Loading forest magic...</p>
+  </div>
+
+  <!-- BACKGROUND MUSIC -->
   <audio id="bgm" loop preload="auto">
     <source src="assets/music.mp3" type="audio/mpeg">
   </audio>
@@ -47,33 +59,35 @@
 
     <header class="profileHeader glitter-hover">
       <div class="headerTop">
-        <span class="badge">✨ ONLINE NOW ✨</span>
+        <span class="badge pulse">✨ ONLINE NOW ✨</span>
         <div class="nowPlaying">
           <span class="npLabel">Now Playing:</span>
           <span id="npText" class="npText">—</span>
-          <button id="toggleMusicBtn" class="miniBtn" title="Toggle music">♫</button>
+          <button id="toggleMusicBtn" class="miniBtn music-toggle" title="Toggle music">
+            <span class="music-icon">♫</span>
+          </button>
         </div>
       </div>
 
-      <h2>Nikita’s Forestspace</h2>
+      <h2>Nikita's Forestspace</h2>
       <p class="status">
         status: <span class="sparkle">in my mushroom era 🍄</span>
       </p>
 
       <div class="marqueeWrap">
         <div class="marquee">
-          ✨ welcome to my forest ✨ thrift queen corner ✨ choose a dragon ✨ don’t step on the mushrooms ✨
+          ✨ welcome to my forest ✨ thrift queen corner ✨ choose a dragon ✨ don't step on the mushrooms ✨ welcome to my forest ✨ thrift queen corner ✨
         </div>
       </div>
     </header>
 
     <section class="grid">
 
-      <div class="card glitter-hover">
+      <div class="card glitter-hover fade-in">
         <h3>About Me</h3>
         <p>
           Welcome to my enchanted forest profile. If you see the orange kitty sprinting between trees,
-          that’s me. The black kitty is the chaos friend. The fluffy grey-and-white kitty is the wise, cranky elder.
+          that's me. The black kitty is the chaos friend. The fluffy grey-and-white kitty is the wise, cranky elder.
         </p>
 
         <div class="divider"></div>
@@ -82,16 +96,17 @@
           <div class="factRow"><span>Interests:</span> mushrooms, vintage, cozy chaos</div>
           <div class="factRow"><span>Vibe:</span> 2010 pop + glitter + woodland creature</div>
           <div class="factRow"><span>Current quest:</span> thrift treasure hunting</div>
+          <div class="factRow"><span>Forest residents:</span> 3 magical cats, 12+ mushrooms</div>
         </div>
 
         <div class="divider"></div>
 
         <p class="tiny">
-          Guestbook idea: open an Issue on this repo and link it here.
+          💡 Pro tip: Watch the cats wander through the forest above. They're on their own schedules.
         </p>
       </div>
 
-      <div class="card glitter-hover">
+      <div class="card glitter-hover fade-in" style="animation-delay: 0.1s;">
         <h3>Blinkies + Links</h3>
 
         <div class="blinkiesGrid">
@@ -107,24 +122,24 @@
 
         <ul class="linkList">
           <li><a href="#thrift">★ Thrift Corner</a></li>
-          <li><a href="#game">★ Dragon Treat Game</a></li>
+          <li><a href="#game">★ Dragon Adventure</a></li>
           <li><a href="#top8">★ Top 8 Thrift Finds</a></li>
         </ul>
 
         <div class="divider"></div>
 
         <p class="tiny">
-          Pro tip: hover over everything. The glitter vibe is aggressive.
+          Pro tip: hover over everything. The glitter vibe is aggressive and intentional.
         </p>
       </div>
 
-      <div class="card wide glitter-hover" id="thrift">
+      <div class="card wide glitter-hover fade-in" id="thrift" style="animation-delay: 0.2s;">
         <h3>🧥 Vintage Loving / Thrifting</h3>
 
         <div class="thriftGrid">
           <div class="thriftRow"><span>Top Find:</span> <strong>orange corduroy jacket</strong> 🍊</div>
           <div class="thriftRow"><span>Dream Find:</span> <strong>70s velvet set</strong></div>
-          <div class="thriftRow"><span>Weakness:</span> <strong>ceramic cats</strong> (I’m trying)</div>
+          <div class="thriftRow"><span>Weakness:</span> <strong>ceramic cats</strong> (I'm trying)</div>
           <div class="thriftRow"><span>Thrift Tip:</span> measure your fave item + bring a tape</div>
         </div>
 
@@ -143,52 +158,134 @@
             <div class="top8Card">8) retro handbag</div>
           </div>
         </div>
+
+        <div class="divider"></div>
+        
+        <p class="tiny">
+          🚧 More thrift finds coming soon! This corner will feature photos of my best discoveries.
+        </p>
       </div>
 
-      <div class="card wide glitter-hover" id="game">
-        <h3>🐉 Dragon Treat Training Game</h3>
-        <p class="tiny">Pick an egg. Feed treats. Your choices decide if your dragon breathes fire, grows wings, or bites you (rude).</p>
+      <div class="card wide glitter-hover fade-in" id="game" style="animation-delay: 0.3s;">
+        <h3>🐉 Dragon Adventure Game</h3>
+        <p class="tiny game-intro">
+          Choose your dragon egg, feed it treats, and watch it grow! Your dragon will develop different abilities based on your choices.
+        </p>
 
         <div class="gameWrap">
-          <div class="gameStep" id="stepPickDragon">
-            <p><strong>Step 1:</strong> Choose a dragon egg</p>
-            <div class="choices">
-              <button class="miniBtn" data-dragon="ember">Ember Egg</button>
-              <button class="miniBtn" data-dragon="storm">Storm Egg</button>
-              <button class="miniBtn" data-dragon="moss">Moss Egg</button>
+          <!-- STEP 1: Choose Dragon -->
+          <div class="gameStep active" id="stepPickDragon">
+            <h4>Step 1: Choose Your Dragon Egg</h4>
+            <p class="step-description">Each egg contains a unique dragon waiting to hatch!</p>
+            <div class="choices dragon-choices">
+              <button class="choiceBtn dragon-btn" data-dragon="ember">
+                <div class="choice-icon">🔥</div>
+                <div class="choice-name">Ember</div>
+                <div class="choice-desc">Fiery Spirit</div>
+              </button>
+              <button class="choiceBtn dragon-btn" data-dragon="storm">
+                <div class="choice-icon">⚡</div>
+                <div class="choice-name">Storm</div>
+                <div class="choice-desc">Sky Wanderer</div>
+              </button>
+              <button class="choiceBtn dragon-btn" data-dragon="moss">
+                <div class="choice-icon">🌿</div>
+                <div class="choice-name">Moss</div>
+                <div class="choice-desc">Forest Guardian</div>
+              </button>
             </div>
           </div>
 
-          <div class="gameStep hidden" id="stepPickTreat">
-            <p><strong>Step 2:</strong> Choose a treat</p>
-            <div class="choices">
-              <button class="miniBtn" data-treat="spicyJerky">Spicy Jerky</button>
-              <button class="miniBtn" data-treat="stardustBerry">Stardust Berry</button>
-              <button class="miniBtn" data-treat="marshmallow">Toasted Marshmallow</button>
+          <!-- STEP 2: Hatch Animation -->
+          <div class="gameStep" id="stepHatching">
+            <h4>Your Dragon is Hatching!</h4>
+            <div class="hatching-animation">
+              <div class="egg-shake">🥚</div>
+            </div>
+            <p class="step-description">Wait for the magic...</p>
+          </div>
+
+          <!-- STEP 3: Choose Treat -->
+          <div class="gameStep" id="stepPickTreat">
+            <h4>Step 2: Choose a Treat for <span id="dragonNameDisplay"></span></h4>
+            <p class="step-description">What you feed your dragon will shape its abilities!</p>
+            <div class="choices treat-choices">
+              <button class="choiceBtn treat-btn" data-treat="spicyJerky">
+                <div class="choice-icon">🌶️</div>
+                <div class="choice-name">Spicy Jerky</div>
+                <div class="choice-desc">Fire breath</div>
+              </button>
+              <button class="choiceBtn treat-btn" data-treat="stardustBerry">
+                <div class="choice-icon">⭐</div>
+                <div class="choice-name">Stardust Berry</div>
+                <div class="choice-desc">Flight power</div>
+              </button>
+              <button class="choiceBtn treat-btn" data-treat="marshmallow">
+                <div class="choice-icon">🍡</div>
+                <div class="choice-name">Toasted Marshmallow</div>
+                <div class="choice-desc">Playful chaos</div>
+              </button>
             </div>
           </div>
 
-          <div class="gameStep hidden" id="stepResult">
+          <!-- STEP 4: Dragon Grows -->
+          <div class="gameStep" id="stepGrowing">
+            <h4>Your Dragon is Growing!</h4>
+            <div class="growing-animation">
+              <div class="sparkle-burst">✨</div>
+            </div>
+            <p class="step-description">The treat is working its magic...</p>
+          </div>
+
+          <!-- STEP 5: Result & Interaction -->
+          <div class="gameStep" id="stepResult">
             <div class="dragonStage">
               <img id="dragonImg" alt="Your dragon" />
+              <div class="dragon-stats" id="dragonStats"></div>
             </div>
 
+            <h4 id="dragonFullName"></h4>
             <p id="resultText" class="resultText"></p>
 
-            <div class="choices">
-              <button id="resetBtn" class="miniBtn secondary">Play again</button>
+            <div class="dragon-interactions">
+              <h4>Interact with Your Dragon</h4>
+              <div class="interaction-buttons">
+                <button class="interactionBtn" data-action="pet">
+                  <span>🤚</span> Pet
+                </button>
+                <button class="interactionBtn" data-action="play">
+                  <span>🎾</span> Play
+                </button>
+                <button class="interactionBtn" data-action="feed">
+                  <span>🍖</span> Feed Again
+                </button>
+                <button class="interactionBtn" data-action="train">
+                  <span>⚔️</span> Train
+                </button>
+              </div>
+              <div id="interactionFeedback" class="interaction-feedback"></div>
+            </div>
+
+            <div class="game-actions">
+              <button id="resetBtn" class="secondaryBtn">Start New Adventure</button>
             </div>
           </div>
         </div>
+
+        <div class="divider"></div>
+        
+        <p class="tiny">
+          🎮 More interactive features coming soon! Imagine riding your dragon through the forest, playing mini-games, and collecting treasures.
+        </p>
       </div>
 
     </section>
 
     <footer class="footer">
-      ✨ made with glitter + GitHub Pages ✨
+      ✨ made with glitter, code, and chaos ✨ © 2025 Nikita's Forestspace
     </footer>
   </main>
 
-  <script src="script.js?v=11"></script>
+  <script src="script.js?v=12"></script>
 </body>
 </html>
